--- a/gb/21/7/26/n13115898.md
+++ b/gb/21/7/26/n13115898.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sbahda331/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/sbahda331/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/sbahda331/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/sbahda331/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2021屏东电影节征件  魏德圣担任活动大使</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2021年07月26日讯】（大纪元记者简惠敏台湾<ahref="https://github.com/sbahda331/djy/blob/master/gb/tag/%E5%B1%8F%E4%B8%9C.md#1">屏东</a>报导）屏东县政府举办2021第6届屏东<ahref="https://github.com/sbahda331/djy/blob/master/gb/tag/%E7%94%B5%E5%BD%B1%E8%8A%82.md#1">电影节</a>征件活动，今年以“屏东好好”为主题征选，报名即日起至8月31日止，并邀请在屏东拍摄破亿票房电影《海角七号》的知名导演<ahref="https://github.com/sbahda331/djy/blob/master/gb/tag/%E9%AD%8F%E5%BE%B7%E5%9C%A3.md#1">魏德圣</a>担任活动大使。县长潘孟安表示，希望透过镜头发掘屏东各种美好，并结合在地文化激发出更多优秀动人的创作，也能让更多人看到“屏东好好”的在地魅力。</p>
-<figure id="13115900" aria-describedby="caption-13115900" style="width: 451px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/07/id13115900-508596-450x404.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/07/id13115900-508596-450x404.jpg" alt="2021屏东电影节征件活动，今年以“屏东好好”为主题征选，报名即日起至8月31日止。" width="451" b="405" /></a><figcaption id="caption-13115900" class="wp-caption-text">2021<ahref="https://github.com/sbahda331/djy/blob/master/gb/tag/%E5%B1%8F%E4%B8%9C.md#1">屏东</a><ahref="https://github.com/sbahda331/djy/blob/master/gb/tag/%E7%94%B5%E5%BD%B1%E8%8A%82.md#1">电影节</a>征件活动，今年以“屏东好好”为主题征选，报名即日起至8月31日止。（屏东县政府提供）</figcaption></figure>
+<p>【大纪元2021年07月26日讯】（大纪元记者简惠敏台湾<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B1%8F%E4%B8%9C.md#1">屏东</a>报导）屏东县政府举办2021第6届屏东<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%94%B5%E5%BD%B1%E8%8A%82.md#1">电影节</a>征件活动，今年以“屏东好好”为主题征选，报名即日起至8月31日止，并邀请在屏东拍摄破亿票房电影《海角七号》的知名导演<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%AD%8F%E5%BE%B7%E5%9C%A3.md#1">魏德圣</a>担任活动大使。县长潘孟安表示，希望透过镜头发掘屏东各种美好，并结合在地文化激发出更多优秀动人的创作，也能让更多人看到“屏东好好”的在地魅力。</p>
+<figure id="13115900" aria-describedby="caption-13115900" style="width: 451px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/07/id13115900-508596-450x404.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/07/id13115900-508596-450x404.jpg" alt="2021屏东电影节征件活动，今年以“屏东好好”为主题征选，报名即日起至8月31日止。" width="451" b="405" /></a><figcaption id="caption-13115900" class="wp-caption-text">2021<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B1%8F%E4%B8%9C.md#1">屏东</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%94%B5%E5%BD%B1%E8%8A%82.md#1">电影节</a>征件活动，今年以“屏东好好”为主题征选，报名即日起至8月31日止。（屏东县政府提供）</figcaption></figure>
 <p>“好的影片，就是最佳的城市行销”县长潘孟安表示，影像传达的魅力最能打动人心，屏东电影节历届来累积相当多优秀作品，除创造竞赛平台给热爱艺术创作的年轻人有空间发挥，借此培养影视产业人才，也补助入选决赛团队拍摄经费，期透过拍摄补助，鼓励优秀电影制作者及有意从事影视产业的学子发挥才华，踊跃报名参加。</p>
 <p>县府表示，屏东电影节征件活动将分为海选及决赛2阶段评选，首先，海选阶段采投稿剧本的方式进行，将由电影制作业、后制、发行业、映演业等不同领域的7位电影人，担任本次评审，评审将选出10组的优质团队将进入决选。</p>
 <p>入选决选队伍，县府提供每队驻地拍摄补助经费10万元，并由导师指导拍摄技巧、调整方向及内容，预计9月中旬将进行驻地拍摄，届时各团队应依中央流行疫情指挥中心最新防疫规定，遵守各项防疫指引，最后决赛阶段将由评审团共同选出首奖、网路人气奖、最佳摄影奖、最佳编剧奖、最佳剪辑奖、最佳演员奖及最佳导演奖等，并角逐最高首奖奖金60万元。</p>
@@ -22,47 +22,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/10/n13080804.md#1">澳中国学生学者隐忧：中共监视恐吓无处不在</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/12/n13082994.md#1">温贞菱观片充电当旅行 坦承《斯卡罗》不好演</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/14/n13087943.md#1">李政宰新片员工确诊 同剧组郑雨盛朱智勋阴性</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/17/n13095554.md#1">澳洲电影《内特拉姆》入选2021戛纳电影节</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/18/n13097378.md#1">港片《天下乌鸦》 夺戛纳电影节短片金棕榈奖</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/19/n13099471.md#1">【珍言真语】李云翔：《布娃娃》是真实故事</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/23/n13110498.md#1">反迫害22周年 新世纪微电影《抓捕》首映</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/26/n13115781.md#1">何香莲老师荣获2021年度教育奉献奖</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/26/n13115703.md#1">适度开放幼儿园等  嘉市26日发送快筛剂</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/26/n13115565.md#1">嘉市府政风处吴武璋  工务处苏文崎26日就职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/10/n13080804.md#1">澳中国学生学者隐忧：中共监视恐吓无处不在</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/12/n13082994.md#1">温贞菱观片充电当旅行 坦承《斯卡罗》不好演</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/14/n13087943.md#1">李政宰新片员工确诊 同剧组郑雨盛朱智勋阴性</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/17/n13095554.md#1">澳洲电影《内特拉姆》入选2021戛纳电影节</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/18/n13097378.md#1">港片《天下乌鸦》 夺戛纳电影节短片金棕榈奖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/19/n13099471.md#1">【珍言真语】李云翔：《布娃娃》是真实故事</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/23/n13110498.md#1">反迫害22周年 新世纪微电影《抓捕》首映</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13689924.md#1">黄敏惠表扬189位模范儿童</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13689366.md#1">嘉靖乾隆巧思竞艳  青花彩瓷景泰蓝南院登场</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689127.md#1">屏东连6年臭氧王 环盟吁县长候选人表态</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/7/n10834918.md#1" target="_blank">曾伯炎：杀母红卫兵孔繁路的悲剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/20/n10862733.md#1" target="_blank">这些前中共军官为何控告江泽民（8）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/12/n11108271.md#1" target="_blank">林辉：从农民吃光“忆苦饭”看中国农村真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/24/n10804401.md#1" target="_blank">这些前中共警察所见证的奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/20/n13102389.md#1">【未解之谜】预言家凯西：我曾是亚特兰蒂斯人</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/12/n13083124.md#1">对于邪灵“附体” 东西方文化如何对待？</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/9/n13079158.md#1">【忽必烈传】马可眼中的皇帝与大元帝国</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/12/n13083162.md#1">苏东坡一身忠直正气 自述多次与鬼神谈判</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/21/n13104808.md#1">欧阳修一生奇遇多 常怀疑自己本是世外之人</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13112643.md#1">【新闻看点】死亡隧道存3谜 江浙沪发196警报</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13112702.md#1">【马克时空】波音CST-100星际航线 将于7月30日升空</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13112565.md#1">【财商天下】快速降负债 恒大走出危局？</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13112629.md#1">台风烟花路径奇异 避开台湾直扑上海浙江</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13111538.md#1">腾讯直播奥运开幕式切掉中国队进场 网民崩溃</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13112498.md#1">【一线采访】被拦隧道内 一车三人死里逃生</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/23/n13110984.md#1">吴宗宪接种第一剂疫苗 自曝隔天出现副作用</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/23/n13110829.md#1">《时代革命》团队宣布：影片版权已转到海外</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13111732.md#1">篠原凉子与市村正亲离婚 两儿监护权归父亲</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13111390.md#1">《恋人的最后情书》影评：相隔几十年的恋情 也能同时开花结果</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/25/n13114539.md#1">50岁吴奇隆体能惊人 节目竞技完胜24岁男星</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/21/n13105343.md#1">蔬菜别直接放冰箱！专家：这样保存最长久</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13112330.md#1">高端疫苗安全和保护力未明 专家：施打或仍有2好处</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/22/n13108194.md#1">三高者易得肾脏病？营养师教你护肾饮食法</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/25/n13113232.md#1">被野熊纠缠7天 美国男子在屋顶写SOS获救</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/25/n13113601.md#1">为了保护10岁小主人 加拿大小狗被土狼咬伤</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688712.md#1">【马克时空】2023美军费超中共3倍 核武库全面现代化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/26/n13674661.md#1">自制一碗降糖餐！十大降血糖食物一次看</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/sbahda331/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/sbahda331/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/26/n13115898.htm">2021屏东电影节征件  魏德圣担任活动大使</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/26/n13115898.htm">2021屏东电影节征件  魏德圣担任活动大使</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/sbahda331/djy/blob/master/gb/21/7/26/n13115898.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/sbahda331/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/sbahda331/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sbahda331/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/21/7/26/n13115898.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
